--- a/notebooks/Docker.ipynb
+++ b/notebooks/Docker.ipynb
@@ -8,13 +8,32 @@
     "# Docker\n",
     "\n",
     "## Install Docker & Docker Compose\n",
+    "- GitHub Codespaces already has docker and docker-compose installed and the docker daemon running\n",
     "- if you download and use SEED VM Ubuntu 20.04 from https://seedsecuritylabs.org/labs.html, you already have docker installed and configured\n",
     "- if you use your own Ubuntu/Kali, follow the instructions from the following link:\n",
     "     - https://www.kali.org/docs/containers/installing-docker-on-kali/#installing-docker-ce-on-kali-linux\n",
-    "\n",
     "- `$ sudo apt install -y docker-compose`\n",
+    "\n",
+    "## Docker Documentations\n",
     "- Docker Manual from SEEDLabs\n",
-    "- [https://github.com/seed-labs/seed-labs/blob/master/manuals/docker/SEEDManual-Container.md](https://github.com/seed-labs/seed-labs/blob/master/manuals/docker/SEEDManual-Container.md)"
+    "- [https://github.com/seed-labs/seed-labs/blob/master/manuals/docker/SEEDManual-Container.md](https://github.com/seed-labs/seed-labs/blob/master/manuals/docker/SEEDManual-Container.md)\n",
+    "- https://docs.docker.com/get-started/\n",
+    "- https://docs.docker.com/manuals/\n",
+    "- \n",
+    "\n",
+    "## Docker Hub Account and CLI Authentication\n",
+    "\n",
+    "- Create an account on [https://hub.docker.com/](https://hub.docker.com/)\n",
+    "- Create Access Token\n",
+    "     - Go to Account Settings -> Create Access Token\n",
+    "     - Save the taken safely somewhere private (Google Drive or OneDrive)\n",
+    "- Rename existing `~/.docker/config.json` file \n",
+    "- Log in from a Terminal using the Access Token\n",
+    "- Note you only have to do this once per system\n",
+    "\n",
+    "```bash\n",
+    "$ docker login -u <username>\n",
+    "```"
    ]
   },
   {
@@ -46,6 +65,26 @@
    ],
    "source": [
     "! echo kali | sudo -S apt install -y docker-compose"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "476cfb65",
+   "metadata": {},
+   "source": [
+    "## Push Docker Image to Docker Hub\n",
+    "\n",
+    "- images can be built and push to Docker hub for others to access publicly or to share privately\n",
+    "- Build and Push First Image - [https://docs.docker.com/get-started/introduction/build-and-push-first-image/](https://docs.docker.com/get-started/introduction/build-and-push-first-image/)\n",
+    "\n",
+    "```\n",
+    "$ docker build -t <username>/image_name:tag .\n",
+    "$ docker push <username>/image_name:tag\n",
+    "```\n",
+    "\n",
+    "## Docker Scout\n",
+    "- See this - [https://docs.docker.com/scout/](https://docs.docker.com/scout/)\n",
+    "- See Quickstart page and go over it step by step!"
    ]
   },
   {
