--- a/notebooks/Docker.ipynb
+++ b/notebooks/Docker.ipynb
@@ -19,7 +19,6 @@
     "- [https://github.com/seed-labs/seed-labs/blob/master/manuals/docker/SEEDManual-Container.md](https://github.com/seed-labs/seed-labs/blob/master/manuals/docker/SEEDManual-Container.md)\n",
     "- https://docs.docker.com/get-started/\n",
     "- https://docs.docker.com/manuals/\n",
-    "- \n",
     "\n",
     "## Docker Hub Account and CLI Authentication\n",
     "\n",
@@ -27,7 +26,7 @@
     "- Create Access Token\n",
     "     - Go to Account Settings -> Create Access Token\n",
     "     - Save the taken safely somewhere private (Google Drive or OneDrive)\n",
-    "- Rename existing `~/.docker/config.json` file \n",
+    "- Rename existing `~/.docker/config.json` file as a backup\n",
     "- Log in from a Terminal using the Access Token\n",
     "- Note you only have to do this once per system\n",
     "\n",
