move Docker Sniffing

--- a/notebooks/NetworkSniffing.ipynb
+++ b/notebooks/NetworkSniffing.ipynb
@@ -1974,10 +1974,68 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Docker MitM Attack Demo\n",
+    "\n",
+    "- See `demos/docker/mitm/docker-compose.yml` file for a docker network demo using docker-compose\n",
+    "- Creates 3 hosts/services:\n",
+    "    - attacker - host\n",
+    "    - server - metasploitable2\n",
+    "    - client\n",
+    "- creates a network using subnet: 10.10.0.0/24\n",
+    "    \n",
+    "- change working directoy to `demos/docker`\n",
+    "- run the following commands\n",
+    "- `$ sudo docker-compose build`\n",
+    "- `$ sudo docker-compose up`\n",
+    "- `$ sudo docker-compose down`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    \n",
+    "## Docker Server\n",
+    "    \n",
+    "- run /bin/bash on server container\n",
+    "- see all the open ports\n",
+    "    \n",
+    "- `$ sudo docker exect -it server /bin/bash`\n",
+    "- `root@server:/# sudo netstat -tulpn | grep LISTEN`\n",
+    "- `$ nmap localhost`\n",
+    "- `$ ifconfig`\n",
+    "- ping client\n",
+    "\n",
+    "\n",
+    "## Docker Client\n",
+    "- run bash command on docker client container\n",
+    "- ping seerver\n",
+    "- telnet server\n",
+    "- `$ telnet 10.10.0.2`\n",
+    "- use account: msfadmin:msfadmin\n",
+    "- install ftp client\n",
+    "- `$ apt update`\n",
+    "- `$ apt install -y ftp`\n",
+    "- ftp to server\n",
+    "- `ftp <server_ip>`; use account: msfadmin:msfadmin\n",
+    "    \n",
+    "    \n",
+    "## Attacker container\n",
+    "- install nmap\n",
+    "- `$ apt update`\n",
+    "- `$ apt install nmap`\n",
+    "- `$ nmap 10.10.0.2`\n",
+    "- install dnsiff package for arpspoof\n",
+    "- `$ apt install -y dsniff`\n",
+    "- Note dsniff is not working on docker, but arpspoof works!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
