--- a/notebooks/Docker.ipynb
+++ b/notebooks/Docker.ipynb
@@ -94,28 +94,7 @@
     "## Docker Networks Demo\n",
     "\n",
     "- see `demos/docker/networks/docker-compose.yml` file for two private networks demo\n",
-    "- "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4d5afe90-8a9b-406e-a62f-579efb827890",
-   "metadata": {},
-   "source": [
-    "## Docker MitM Attack Demo\n",
-    "\n",
-    "- See `demos/docker/mitm/docker-compose.yml` file for a docker network demo using docker-compose\n",
-    "- Creates 3 hosts/services:\n",
-    "    - attacker - host\n",
-    "    - server - metasploitable2\n",
-    "    - client\n",
-    "- creates a network using subnet: 10.10.0.0/24\n",
-    "    \n",
-    "- change working directoy to `demos/docker`\n",
-    "- run the following commands\n",
-    "- `$ sudo docker-compose build`\n",
-    "- `$ sudo docker-compose up`\n",
-    "- `$ sudo docker-compose down`\n",
+    "-\n",
     "\n",
     "## Important Docker Commands\n",
     "\n",
@@ -124,50 +103,8 @@
     "- `$ sudo docker image ls`\n",
     "- `$ sudo docker image rm <image-id>`\n",
     "- `$ sudo docker network ls`\n",
-    "- `$ sudo docker network rm <network-id>`\n",
-    "    \n",
-    "## Docker Server\n",
-    "    \n",
-    "- run /bin/bash on server container\n",
-    "- see all the open ports\n",
-    "    \n",
-    "- `$ sudo docker exect -it server /bin/bash`\n",
-    "- `root@server:/# sudo netstat -tulpn | grep LISTEN`\n",
-    "- `$ nmap localhost`\n",
-    "- `$ ifconfig`\n",
-    "- ping client\n",
-    "\n",
-    "\n",
-    "## Docker Client\n",
-    "- run bash command on docker client container\n",
-    "- ping seerver\n",
-    "- telnet server\n",
-    "- `$ telnet 10.10.0.2`\n",
-    "- use account: msfadmin:msfadmin\n",
-    "- install ftp client\n",
-    "- `$ apt update`\n",
-    "- `$ apt install -y ftp`\n",
-    "- ftp to server\n",
-    "- `ftp <server_ip>`; use account: msfadmin:msfadmin\n",
-    "    \n",
-    "    \n",
-    "## Attacker container\n",
-    "- install nmap\n",
-    "- `$ apt update`\n",
-    "- `$ apt install nmap`\n",
-    "- `$ nmap 10.10.0.2`\n",
-    "- install dnsiff package for arpspoof\n",
-    "- `$ apt install -y dsniff`\n",
-    "- Note dsniff is not working on docker, but arpspoof works!"
+    "- `$ sudo docker network rm <network-id>`"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68e29078-1699-4579-a3f3-9592ad498015",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
