--- a/notebooks/Networking.ipynb
+++ b/notebooks/Networking.ipynb
@@ -53,7 +53,7 @@
     "- the conceptual layers make it easier for different network devices (routers, switches, firewalls) and applications (Web, email) to focus on their respective layers and ignore the others\n",
     "\n",
     "### OSI layers\n",
-    "<img src=\"./resources/OSIModel.png\">\n",
+    "![OSI Layers](resources/OSIModel.png)\n",
     "\n",
     "#### REMEMBER: PDNTSPA - Please Do Not Throw Sausage Pizza Away\n",
     "\n",
