--- a/course/notebooks/00-TableOfContents.ipynb
+++ b/course/notebooks/00-TableOfContents.ipynb
@@ -15,7 +15,7 @@
     "- **[Scapy Introduction](./ScapyIntro.ipynb)**\n",
     "- **[Scapy Create, Send and Receive Packets](./ScapyCreateSendReceivePackets.ipynb)**\n",
     "- **[Sniffing Packets with Scapy](./SniffingWithScapy.ipynb)**\n",
-    "- **[Traceroute Scapy vs Bash](./Traceroute-BashVsScapy.ipynb)**\n",
+    "- **[TCP Attacks](./TCPAttacks.ipynb)**\n",
     "- **[Scapy Scripts](./ScapyScripts.ipynb)**\n",
     "- **[Format Strings](https://github.com/rambasnet/EthicalHacking/blob/main/FormatStrings.ipynb)**\n",
     "- **[Server StackOverflow Exploitation](./NetworkExploitation.ipynb)**"
@@ -45,7 +45,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
