add TCP Attacks

--- a/course/notebooks/00-TableOfContents.ipynb
+++ b/course/notebooks/00-TableOfContents.ipynb
@@ -17,8 +17,7 @@
     "- **[Sniffing Packets with Scapy](./SniffingWithScapy.ipynb)**\n",
     "- **[TCP Attacks](./TCPAttacks.ipynb)**\n",
     "- **[Scapy Scripts](./ScapyScripts.ipynb)**\n",
-    "- **[Format Strings](https://github.com/rambasnet/EthicalHacking/blob/main/FormatStrings.ipynb)**\n",
-    "- **[Server StackOverflow Exploitation](./NetworkExploitation.ipynb)**"
+    "- **[Format Strings](https://github.com/rambasnet/EthicalHacking/blob/main/FormatStrings.ipynb)**"
    ]
   },
   {
