update DNS Attack

--- a/course/notebooks/DNS-Attacks.ipynb
+++ b/course/notebooks/DNS-Attacks.ipynb
@@ -173,47 +173,54 @@
     "```\n",
     "\n",
     "### Configure DNS Server\n",
+    "\n",
+    "- dns-server-53 container at 10.9.0.53 is the DNS server for our experimental setup\n",
     "- use widely used DNS server software BIND (Berkley Internet Name Domain) by UC Berkeley\n",
     "- install `bind9` package released in 2000\n",
     "- `bind9` is already installed on the dns-server-53 container\n",
     "\n",
     "```bash\n",
     "apt list --installed | grep bind9\n",
-    "```\n",
     "sudo apt install bind9\n",
     "```\n",
+    "\n",
     "- configure bind9 by updating `/etc/bind/named.conf.options` file\n",
     "- dump file - tells where the cache is dumped to\n",
     "- can use rndc (Remote Name Daemon Control) to mange `bind9`\n",
+    "- to dump cache to a file and empty it from server's cache, use the following rndc commands\n",
+    "\n",
     "```bash\n",
     "rndc dumpdb -cache\n",
     "rndc flush\n",
     "```\n",
+    "\n",
     "- disable DNSSEC and turn off DNSSEC validation\n",
     "- use fixed static query source port; random query source port is default for security\n",
     "    - random source port makes attacks harder to forge DNS response\n",
-    "- start the bind9 service\n",
+    "- start the bind9 service or restart the containers\n",
+    "\n",
     "```bash\n",
     "service named start\n",
     "```\n",
     "\n",
     "### Configure Attacker's Nameserver\n",
     "\n",
-    "- use `attacker32.com` as the attacker's domain the SEED Lab's author has purchased but not hosting any site\n",
+    "- use `attacker32.com` as the attacker's domain (owned by SEED Lab) but not hosting any site\n",
     "- set up the authoritative nameserver for this domain on the attacker's nameserver\n",
     "\n",
     "#### Create zones\n",
     "\n",
     "- setup forward look up zone; uses RFC 1035 format\n",
-    "- configure `/etc/bind/named.conf`; see the `named.conf` file in the `attackers_ns` directory\n",
+    "- configure `/etc/bind/named.conf` with two zone configurations: forward and reverse lookups\n",
+    "- see the `named.conf` file in the `attackers_ns` directory\n",
     "    - `@` stands for the zone name - attacker32.com \n",
     "- the `file` keyword in the zone definition is called zone file\n",
     "\n",
-    "#### Setup the forward lookup zone file\n",
+    "#### Setup the forward and reverse lookup zone files\n",
     "\n",
     "- the zone file is where the actual DNS resolution is stored\n",
-    "- in `/etc/bind/` create `zone_attacker32.com` zone file\n",
-    "- see the contents of the file and comments after `;` for explanation of each line\n",
+    "- in `/etc/bind/` create `zone_attacker32.com`, and `zone_192.168.0` zone files\n",
+    "- see the contents of the files and comments after `;` for explanation of each line\n",
     "\n",
     "#### Test the setup\n",
     "\n",
@@ -227,13 +234,13 @@
     "\n",
     "#### Add Forward Zones to Local DNS Server\n",
     "\n",
-    "- while testing above, we've to specify the `@NSIP` when running the dig\n",
+    "- while testing above, we've to specify the specific `@NSIP` when running the dig\n",
     "- if we don't, the local DNS server will be used\n",
     "- since `www.attacker32.com` is not registered with `.com` server; the local DNS gets the official nameserver for the `attacker32.com` and NOT `10.9.0.153`\n",
     "- two problems: private IP, only the owner of the domain (author of seedlabs) can register `attacker32.com` with `.com` root server\n",
     "- to solve it, we add a forward zone to the local DNS server (`10.9.0.53`)\n",
     "- so any queries to `attacker32.com` will be forwarded to `10.9.0.153`\n",
-    "- also need to add `empty-zone-enable on` so the empty zone created for private/reserved IP prefix\n",
+    "- also need to add `empty-zone-enable on` so the empty zone is created for private/reserved IP prefix\n",
     "\n",
     "#### Testing without @ option\n",
     "\n",
@@ -475,7 +482,6 @@
     "rndc flush\n",
     "cat /var/cache/bind/dump.db\n",
     "rm /var/cache/bind/dump.db\n",
-    "rm \n",
     "```\n",
     "\n",
     "- when a local DNS server receives DNS query, it first checks in its cache\n",
@@ -489,20 +495,20 @@
     "    \n",
     "- let's poison the cache of local DNS server (10.9.0.53) in the DNS_Attack container setup\n",
     "- configure and run `DNS_Attack/volumes/dns_sniff_spoof.py` on the attacker container\n",
-    "- we match the hostname `www.example.com` to IP `1.2.3.4` while telling the local DNS server that the nameserver of the example.com domain is `ns.attacker32.com`\n",
+    "- match the hostname `www.example.com` to IP `1.2.3.4` and the nameserver of the `example.com` is `ns.attacker32.com`\n",
     "- make sure to find and change the interface name in the script using the following command\n",
     "\n",
     "```bash\n",
     "ip -br address\n",
     "```\n",
     "\n",
-    "- on the user machine run\n",
+    "- on the user machine run `dig`\n",
     "\n",
     "```bash\n",
     "dig www.example.com\n",
     "```\n",
     "\n",
-    "- if you see `1.2.34` in answer, the the uesr got the forged reply!\n",
+    "- if you see `1.2.3.4` in answer, the the uesr got the forged reply!\n",
     "- run `rndc dump` command to see if the cache is poisoned on the DNS server\n",
     "- the cache set to be dumped to `/var/cache/bind/dump.db` in the `named.conf.options` file\n",
     "\n",
