update DNS Attack

--- a/course/notebooks/DNS-Attacks.ipynb
+++ b/course/notebooks/DNS-Attacks.ipynb
@@ -164,6 +164,8 @@
    "source": [
     "## DNS Attack Setup\n",
     "\n",
+    "![DNS Attack Setup with Containers](./resources/DNS-Attack-Setup.png)\n",
+    "\n",
     "### Configure User Machine\n",
     "- configure user machine with ip 10.9.0.5 to use 10.9.0.53 as DNS server\n",
     "- change the `/etc/resolv.conf` file to use the DNS server\n",
@@ -449,6 +451,7 @@
    "source": [
     "## DNS Attack Surfaces\n",
     "\n",
+    "\n",
     "### Attacks on compromised machines\n",
     "\n",
     "- if the attackers gain root privilege on a system, theey can do a lot of damages\n",
@@ -475,6 +478,8 @@
     "\n",
     "\n",
     "## Local DNS Cache Poisoning Attack\n",
+    "\n",
+    "![DNS Cache Poisoning Attack](./resources/DNS-Poisoning-Attack.png)\n",
     "\n",
     "- flush and clear the local DNS server (dns-server-53) cache\n",
     "```bash\n",
@@ -515,7 +520,7 @@
     "```bash\n",
     "rndc dumpd -cache\n",
     "grep -B 1 example /var/cache/bind/dump.db\n",
-    "```\n"
+    "```"
    ]
   },
   {
